--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Nedeljni_V_Kristina_Garcia_Francisco.MainWindow"
+﻿<Window x:Class="Nedeljni_V_Kristina_Garcia_Francisco.View.UserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco"
+        xmlns:local="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="UserWindow" Height="450" Width="800">
     <Grid>
         
     </Grid>
