--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
@@ -4,9 +4,304 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco.View"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="UserWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
-</Window>
+        Title="Between Us"
+        MinHeight="200"
+        MinWidth="700"
+        Height="720"
+        Width="1280"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        MouseLeftButtonDown="DragMe">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="40" />
+            </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0"
+              Grid.Column="0"
+              VerticalAlignment="Top"
+              Background="#505050"
+              Height="70"
+              Margin="0,0,0,0">
+                <Label x:Name="lblMenu"
+                   FontSize="35"
+                   Margin="20,0,20,0"
+                   HorizontalContentAlignment="Center"
+                   FontWeight="Bold"
+                                   Foreground="{StaticResource PrimaryHueMidBrush}"
+
+                   FontStyle="Italic"
+                   VerticalContentAlignment="Bottom"
+                   Height="60">Between Us</Label>
+                <Border Grid.Row="0"
+                    Grid.RowSpan="2"
+                    BorderThickness="0"
+                    Margin="30,65,30,0"
+                    Height="5"
+                                    Background="{StaticResource PrimaryHueMidBrush}"
+
+                    CornerRadius="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"></Border>
+                <!--<TextBlock Background="White" Margin="20,0,20,0" VerticalAlignment="Bottom" Height="5"></TextBlock>-->
+            </Grid>
+            <Border Grid.Row="0"
+                Grid.Column="1"
+                Grid.RowSpan="2"
+                BorderThickness="0"
+                Margin="0,69,0,-2"
+                Height="2"
+                Panel.ZIndex="1"
+                Background="{StaticResource PrimaryHueMidBrush}"
+
+            CornerRadius="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"></Border>
+            <Border Grid.Row="0"
+                Grid.Column="1"
+                BorderThickness="0"
+                Margin="0,0,0,-5"
+                Height="10"
+                Background="#505050"
+                CornerRadius="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom"></Border>
+            <materialDesign:ColorZone Mode="PrimaryMid"
+                                  Grid.Column="1"
+                                  VerticalAlignment="top"
+                                  HorizontalAlignment="Right"
+                                  Background="{x:Null}"
+                                  Width="1022">
+                <Grid Margin="0,0,0,0">
+                    <Grid VerticalAlignment="Center"
+                      HorizontalAlignment="Right">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="350" />
+                            <ColumnDefinition Width="45" />
+                            <ColumnDefinition Width="45" />
+                            <ColumnDefinition Width="45" />
+                            <ColumnDefinition Width="45" />
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Label x:Name="lblIme"
+                               FontSize="14"
+                               HorizontalContentAlignment="Right"
+                               FontStyle="Italic"
+                               Margin="0 8 50 0"
+                               VerticalContentAlignment="Top"></Label>
+                            <Label x:Name="lblName"
+                               FontSize="18"
+                               Margin="0 5 130 8"
+                               HorizontalContentAlignment="Right"
+                               FontStyle="Italic"
+                               VerticalContentAlignment="Center"></Label>
+                            <!--<Label x:Name="lblKorisnickoIme" Content="Sodoma" FontSize="14" HorizontalContentAlignment="Right" Margin="20" VerticalContentAlignment="Top"/>-->
+                            <Grid Margin="0,0,-45,0" >
+                            <Button Name="btwLeave"
+                                    Width="150"
+                                    Margin="100,15,-130,15"
+                                    Style="{StaticResource MaterialDesignRaisedButton}"
+                                    materialDesign:ButtonAssist.CornerRadius="20"
+                                    Height="35"
+                                    Click="Logout_Click">
+                                <StackPanel Orientation="Horizontal">
+                                    <materialDesign:PackIcon Kind="Logout"
+                                                         Foreground="#505050"
+                                                         VerticalAlignment="Center"
+                                                         Margin="0,0,5,0"
+                                                         Height="25"
+                                                         Width="25" />
+                                    <TextBlock FontSize="15" VerticalAlignment="Center" Margin="0 0 0 0" Foreground="#505050">Logoff</TextBlock>
+                                </StackPanel>
+                            </Button>
+                        </Grid>
+
+                        </Grid>
+                        <Button Grid.Column="2"
+                                    x:Name="LowerWindow"
+                                    Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
+                                    ToolTip="Window to tray"
+                                    Height="22"
+                                    Width="22"
+                                    Foreground="Black"
+                                    Panel.ZIndex="1"
+                                    Margin="0 0 0 0"
+                                    Visibility="Visible"
+                                    Click="Lower_Window"
+                                    Background="{x:Null}"
+                                    BorderBrush="{x:Null}">
+                            <materialDesign:PackIcon Kind="WindowMinimize"
+                                                         Height="16"
+                                                         Width="16" />
+                        </Button>
+                        <Button Grid.Column="3"
+                                    x:Name="ExtendWindow1"
+                                    Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
+                                    BorderBrush="{x:Null}"
+                                    Background="{x:Null}"
+                                    Height="22"
+                                    Width="22"
+                                    Foreground="Black"
+                                    Panel.ZIndex="1"
+                                    Margin="0,0,-5,5"
+                                    Click="Extend_Window"
+                                    Visibility="Collapsed">
+                            <materialDesign:PackIcon Kind="WindowMaximize"
+                                                         Height="16"
+                                                         Width="16" />
+                        </Button>
+                        <Button Grid.Column="3"
+                                    x:Name="ExtendWindow"
+                                    Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
+                                    ToolTip="Maximized"
+                                    BorderBrush="{x:Null}"
+                                    Background="{x:Null}"
+                                    Height="22"
+                                    Width="22"
+                                    Foreground="Black"
+                                    Panel.ZIndex="1"
+                                    Margin="0 0 0 0"
+                                    Visibility="Visible"
+                                    Click="Extend_Window">
+                            <materialDesign:PackIcon Kind="WindowMaximize"
+                                                         Height="16"
+                                                         Width="16" />
+                        </Button>
+                        <Button Grid.Column="4"
+                                    x:Name="Leave"
+                                    Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
+                                    ToolTip="Leave application"
+                                    BorderBrush="#FFC34A4A"
+                                    Background="#FFC34A4A"
+                                    Height="22"
+                                    Width="22"
+                                    Foreground="Black"
+                                    Margin="0 0 0 0"
+                                    Visibility="Visible"
+                                    Click="Exit">
+                            <materialDesign:PackIcon Kind="WindowClose"
+                                                         Height="16"
+                                                         Width="16" />
+                        </Button>
+                    </Grid>
+                </Grid>
+            </materialDesign:ColorZone>
+            <Grid HorizontalAlignment="Stretch"
+              Background="#505050"
+              Grid.Row="1"
+              >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="325*" />
+                </Grid.RowDefinitions>
+                <ScrollViewer HorizontalAlignment="Stretch"
+                          HorizontalScrollBarVisibility="Disabled"
+                          VerticalScrollBarVisibility="Auto"
+                          Background="#505050"
+                          Grid.Column="0"
+                          Grid.Row="1">
+                    <StackPanel x:Name="Menu"
+                            Margin="10" />
+                </ScrollViewer>
+            </Grid>
+            <TextBlock Grid.Row="2"
+                   Grid.Column="0"
+                   Background="#505050">
+                <Label Width="250"
+                       Margin="0,5,0,0"
+                       FontSize="16"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       HorizontalContentAlignment="Center"
+                       VerticalContentAlignment="Center"
+                        Foreground="{StaticResource PrimaryHueMidBrush}">Version 1.026</Label></TextBlock>
+            <!--<TextBlock Background="#FF8BC34A" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="0,15,0,0" Height="5"></TextBlock>-->
+            <Grid x:Name="StackPanelMain"
+              Grid.Row="1"
+              Grid.Column="1"
+              VerticalAlignment="Top"
+              HorizontalAlignment="Stretch"></Grid>
+            <!--Donja traka sa vremenom i datumom-->
+            <TextBlock Grid.Row="2"
+                   Grid.Column="1"
+                   VerticalAlignment="Center"
+                   FontSize="18"
+                   HorizontalAlignment="Left"
+                   FontWeight="Bold"
+                   Margin="11 -2 0 0"
+                   Foreground="#505050"
+            >Between Us</TextBlock>
+            <TextBlock Grid.Row="2"
+                   Grid.Column="1"
+                   VerticalAlignment="Center"
+                   FontSize="18"
+                   HorizontalAlignment="Left"
+                   Margin="10 0"
+                   FontWeight="Bold"
+                    Foreground="{StaticResource PrimaryHueMidBrush}"
+
+            >Between Us</TextBlock>
+            <Grid Grid.Column="1"
+              Grid.Row="2"
+              Background="White"
+              HorizontalAlignment="Right">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="18" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0"
+                    Margin="0,0,-10,0"
+                    ToolTip="Datum"
+                    Background="{x:Null}"
+                    BorderBrush="{x:Null}">
+                    <materialDesign:PackIcon Kind="CalendarMonthOutline"
+                                         Width="25"
+                                         Height="25"
+                                         Foreground="#505050" />
+                </Button>
+                <TextBlock Grid.Column="1"
+                       VerticalAlignment="Center"
+                       FontSize="15"
+                       Height="auto"
+                       Foreground="#505050"
+                       HorizontalAlignment="Right"
+                       Text="{Binding Source={x:Static system:DateTime.Now}, StringFormat= dddd dd. MMMM yyyy.}" />
+                <Rectangle Grid.Column="2"
+                       VerticalAlignment="Stretch"
+                       HorizontalAlignment="Right"
+                       Fill="#505050"
+                       Margin="0,5,0,5"
+                       Width="1" />
+                <!--Vreme-->
+                <Button Grid.Column="3"
+                    Margin="0,0,0,0"
+                    ToolTip="Vreme"
+                    Background="{x:Null}"
+                    BorderBrush="{x:Null}"
+                    Width="55">
+                    <materialDesign:PackIcon Kind="Clock"
+                                         Width="25"
+                                         Height="25"
+                                         Foreground="#505050" />
+                </Button>
+                <TextBlock Grid.Column="4"
+                       x:Name="vr"
+                       Foreground="#505050"
+                       Height="auto"
+                       FontSize="15"
+                       VerticalAlignment="Center"
+                       Margin="-10,0,32,0" />
+            </Grid>
+        </Grid>
+    </Window>
