--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/AllPendingUsersWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/AllPendingUsersWindow.xaml
@@ -21,6 +21,26 @@
                 <RowDefinition Height="11*"/>
                 <RowDefinition Height="9*"/>
             </Grid.RowDefinitions>
+            <materialDesign:Snackbar 
+                    Height="40" 
+                    VerticalAlignment="Top" 
+                    HorizontalAlignment="Center"
+                    Margin="0,0,0,0"
+                    IsActive="False"
+                    x:Name="InfoMessage"
+                    FontSize="16"
+                    Background="{Binding InfoLabelBG}"
+                    FontFamily="{DynamicResource MaterialDesignFont}"
+                    >
+                <materialDesign:SnackbarMessage Content="{Binding InfoLabel}"
+                                                    HorizontalContentAlignment="Center"
+                                                    Margin="0,0,0,0"
+                                                    Height="40"
+                                                    Width="400"
+                                                    FontWeight="Bold"
+                                                    Foreground="Black"
+                                                    ActionCommand="{Binding SnackPendingInfo}" />
+            </materialDesign:Snackbar>
             <!--Header-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,-178,0" Grid.RowSpan="2">
                 <Grid HorizontalAlignment="Left">
@@ -98,7 +118,7 @@
                         Foreground="{StaticResource PrimaryHueMidBrush}"
                         FontWeight="Bold"
                         FontSize="30"
-                        Height="64">Waiting Resopnse</Label>
+                        Height="64">Waiting Response</Label>
                     <Border Grid.Row="0"
                         BorderThickness="0"
                         Margin="-48,70,208,420"
