--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
@@ -15,12 +15,12 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         MouseLeftButtonDown="DragMe">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="70" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="40" />
-            </Grid.RowDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250" />
             <ColumnDefinition Width="*" />
@@ -31,29 +31,29 @@
               Background="#505050"
               Height="70"
               Margin="0,0,0,0">
-                <Label x:Name="lblMenu"
+            <Label x:Name="lblMenu"
                    FontSize="35"
                    Margin="20,0,20,0"
                    HorizontalContentAlignment="Center"
                    FontWeight="Bold"
-                                   Foreground="{StaticResource PrimaryHueMidBrush}"
+                   Foreground="{StaticResource PrimaryHueMidBrush}"
 
                    FontStyle="Italic"
                    VerticalContentAlignment="Bottom"
                    Height="60">Between Us</Label>
-                <Border Grid.Row="0"
+            <Border Grid.Row="0"
                     Grid.RowSpan="2"
                     BorderThickness="0"
                     Margin="30,65,30,0"
                     Height="5"
-                                    Background="{StaticResource PrimaryHueMidBrush}"
+                    Background="{StaticResource PrimaryHueMidBrush}"
 
                     CornerRadius="5"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"></Border>
-                <!--<TextBlock Background="White" Margin="20,0,20,0" VerticalAlignment="Bottom" Height="5"></TextBlock>-->
-            </Grid>
-            <Border Grid.Row="0"
+            <!--<TextBlock Background="White" Margin="20,0,20,0" VerticalAlignment="Bottom" Height="5"></TextBlock>-->
+        </Grid>
+        <Border Grid.Row="0"
                 Grid.Column="1"
                 Grid.RowSpan="2"
                 BorderThickness="0"
@@ -65,7 +65,7 @@
             CornerRadius="0"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"></Border>
-            <Border Grid.Row="0"
+        <Border Grid.Row="0"
                 Grid.Column="1"
                 BorderThickness="0"
                 Margin="0,0,0,-5"
@@ -74,37 +74,71 @@
                 CornerRadius="0"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Bottom"></Border>
-            <materialDesign:ColorZone Mode="PrimaryMid"
+        <materialDesign:ColorZone Mode="PrimaryMid"
                                   Grid.Column="1"
                                   VerticalAlignment="top"
                                   HorizontalAlignment="Right"
                                   Background="{x:Null}"
                                   Width="1022">
-                <Grid Margin="0,0,0,0">
-                    <Grid VerticalAlignment="Center"
+            <Grid Margin="0,0,0,0">
+                <Grid VerticalAlignment="Center"
                       HorizontalAlignment="Right">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="350" />
-                            <ColumnDefinition Width="45" />
-                            <ColumnDefinition Width="45" />
-                            <ColumnDefinition Width="45" />
-                            <ColumnDefinition Width="45" />
-                        </Grid.ColumnDefinitions>
-                        <Grid Grid.Column="0">
-                            <Label x:Name="lblIme"
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="350" />
+                        <ColumnDefinition Width="45" />
+                        <ColumnDefinition Width="45" />
+                        <ColumnDefinition Width="45" />
+                        <ColumnDefinition Width="45" />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" RenderTransformOrigin="0.509,0.462">
+                        <Button x:Name="btnAddPost"
+                        Style="{StaticResource MaterialDesignRaisedButton}"
+                        materialDesign:ButtonAssist.CornerRadius="20"
+                        ToolTip="Create a new Post"
+                        Margin="-472,0,672,15"
+                        Width="150"
+                        Foreground="White"
+                        Command="{Binding AddPost, UpdateSourceTrigger=PropertyChanged}"
+                        Height="35"
+                        Background="#FF8BC34A"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Left"
+                        Content="Create New Post"
+                        BorderBrush="{x:Null}"></Button>
+                        <materialDesign:Snackbar 
+                    Height="40" 
+                    VerticalAlignment="Top" 
+                    HorizontalAlignment="Center"
+                    Margin="-500,0,0,0"
+                    IsActive="False"
+                    x:Name="InfoMessage"
+                    FontSize="16"
+                    Background="{Binding InfoLabelBG}"
+                    FontFamily="{DynamicResource MaterialDesignFont}"
+                    >
+                            <materialDesign:SnackbarMessage Content="{Binding InfoLabel}"
+                                                    HorizontalContentAlignment="Center"
+                                                    Margin="0,0,0,0"
+                                                    Height="40"
+                                                    Width="400"
+                                                    FontWeight="Bold"
+                                                    Foreground="Black"
+                                                    ActionCommand="{Binding SnackInfo}" />
+                        </materialDesign:Snackbar>
+                        <Label x:Name="lblIme"
                                FontSize="14"
                                HorizontalContentAlignment="Right"
                                FontStyle="Italic"
                                Margin="0 8 50 0"
                                VerticalContentAlignment="Top"></Label>
-                            <Label x:Name="lblName"
+                        <Label x:Name="lblName"
                                FontSize="18"
                                Margin="0 5 130 8"
                                HorizontalContentAlignment="Right"
                                FontStyle="Italic"
                                VerticalContentAlignment="Center"></Label>
-                            <!--<Label x:Name="lblKorisnickoIme" Content="Sodoma" FontSize="14" HorizontalContentAlignment="Right" Margin="20" VerticalContentAlignment="Top"/>-->
-                            <Grid Margin="0,0,-45,0" >
+                        <!--<Label x:Name="lblKorisnickoIme" Content="Sodoma" FontSize="14" HorizontalContentAlignment="Right" Margin="20" VerticalContentAlignment="Top"/>-->
+                        <Grid Margin="0,0,-45,0" >
                             <Button Name="btwLeave"
                                     Width="150"
                                     Margin="100,15,-130,15"
@@ -124,8 +158,8 @@
                             </Button>
                         </Grid>
 
-                        </Grid>
-                        <Button Grid.Column="2"
+                    </Grid>
+                    <Button Grid.Column="2"
                                     x:Name="LowerWindow"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
                                     ToolTip="Window to tray"
@@ -138,11 +172,11 @@
                                     Click="Lower_Window"
                                     Background="{x:Null}"
                                     BorderBrush="{x:Null}">
-                            <materialDesign:PackIcon Kind="WindowMinimize"
+                        <materialDesign:PackIcon Kind="WindowMinimize"
                                                          Height="16"
                                                          Width="16" />
-                        </Button>
-                        <Button Grid.Column="3"
+                    </Button>
+                    <Button Grid.Column="3"
                                     x:Name="ExtendWindow1"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
                                     BorderBrush="{x:Null}"
@@ -154,11 +188,11 @@
                                     Margin="0,0,-5,5"
                                     Click="Extend_Window"
                                     Visibility="Collapsed">
-                            <materialDesign:PackIcon Kind="WindowMaximize"
+                        <materialDesign:PackIcon Kind="WindowMaximize"
                                                          Height="16"
                                                          Width="16" />
-                        </Button>
-                        <Button Grid.Column="3"
+                    </Button>
+                    <Button Grid.Column="3"
                                     x:Name="ExtendWindow"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
                                     ToolTip="Maximized"
@@ -171,11 +205,11 @@
                                     Margin="0 0 0 0"
                                     Visibility="Visible"
                                     Click="Extend_Window">
-                            <materialDesign:PackIcon Kind="WindowMaximize"
+                        <materialDesign:PackIcon Kind="WindowMaximize"
                                                          Height="16"
                                                          Width="16" />
-                        </Button>
-                        <Button Grid.Column="4"
+                    </Button>
+                    <Button Grid.Column="4"
                                     x:Name="Leave"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
                                     ToolTip="Leave application"
@@ -187,32 +221,32 @@
                                     Margin="0 0 0 0"
                                     Visibility="Visible"
                                     Click="Exit">
-                            <materialDesign:PackIcon Kind="WindowClose"
+                        <materialDesign:PackIcon Kind="WindowClose"
                                                          Height="16"
                                                          Width="16" />
-                        </Button>
-                    </Grid>
+                    </Button>
                 </Grid>
-            </materialDesign:ColorZone>
-            <Grid HorizontalAlignment="Stretch"
+            </Grid>
+        </materialDesign:ColorZone>
+        <Grid HorizontalAlignment="Stretch"
               Background="#505050"
               Grid.Row="1"
               >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="325*" />
-                </Grid.RowDefinitions>
-                <ScrollViewer HorizontalAlignment="Stretch"
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="325*" />
+            </Grid.RowDefinitions>
+            <ScrollViewer HorizontalAlignment="Stretch"
                           HorizontalScrollBarVisibility="Disabled"
                           VerticalScrollBarVisibility="Auto"
                           Background="#505050"
                           Grid.Column="0"
                           Grid.Row="1">
-                    <StackPanel x:Name="Menu"
+                <StackPanel x:Name="Menu"
                             Margin="10" />
-                </ScrollViewer>
-            </Grid>
-            <TextBlock Grid.Row="2"
+            </ScrollViewer>
+        </Grid>
+        <TextBlock Grid.Row="2"
                    Grid.Column="0"
                    Background="#505050">
                 <Label Width="250"
@@ -223,14 +257,14 @@
                        HorizontalContentAlignment="Center"
                        VerticalContentAlignment="Center"
                         Foreground="{StaticResource PrimaryHueMidBrush}">Version 1.026</Label></TextBlock>
-            <!--<TextBlock Background="#FF8BC34A" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="0,15,0,0" Height="5"></TextBlock>-->
-            <Grid x:Name="StackPanelMain"
+        <!--<TextBlock Background="#FF8BC34A" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="0,15,0,0" Height="5"></TextBlock>-->
+        <Grid x:Name="StackPanelMain"
               Grid.Row="1"
               Grid.Column="1"
               VerticalAlignment="Top"
               HorizontalAlignment="Stretch"></Grid>
-            <!--Donja traka sa vremenom i datumom-->
-            <TextBlock Grid.Row="2"
+        <!--Donja traka sa vremenom i datumom-->
+        <TextBlock Grid.Row="2"
                    Grid.Column="1"
                    VerticalAlignment="Center"
                    FontSize="18"
@@ -239,7 +273,7 @@
                    Margin="11 -2 0 0"
                    Foreground="#505050"
             >Between Us</TextBlock>
-            <TextBlock Grid.Row="2"
+        <TextBlock Grid.Row="2"
                    Grid.Column="1"
                    VerticalAlignment="Center"
                    FontSize="18"
@@ -249,59 +283,59 @@
                     Foreground="{StaticResource PrimaryHueMidBrush}"
 
             >Between Us</TextBlock>
-            <Grid Grid.Column="1"
+        <Grid Grid.Column="1"
               Grid.Row="2"
               Background="White"
               HorizontalAlignment="Right">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="18" />
-                    <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="auto" />
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="18" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"
                     Margin="0,0,-10,0"
                     ToolTip="Datum"
                     Background="{x:Null}"
                     BorderBrush="{x:Null}">
-                    <materialDesign:PackIcon Kind="CalendarMonthOutline"
+                <materialDesign:PackIcon Kind="CalendarMonthOutline"
                                          Width="25"
                                          Height="25"
                                          Foreground="#505050" />
-                </Button>
-                <TextBlock Grid.Column="1"
+            </Button>
+            <TextBlock Grid.Column="1"
                        VerticalAlignment="Center"
                        FontSize="15"
                        Height="auto"
                        Foreground="#505050"
                        HorizontalAlignment="Right"
                        Text="{Binding Source={x:Static system:DateTime.Now}, StringFormat= dddd dd. MMMM yyyy.}" />
-                <Rectangle Grid.Column="2"
+            <Rectangle Grid.Column="2"
                        VerticalAlignment="Stretch"
                        HorizontalAlignment="Right"
                        Fill="#505050"
                        Margin="0,5,0,5"
                        Width="1" />
-                <!--Vreme-->
-                <Button Grid.Column="3"
+            <!--Vreme-->
+            <Button Grid.Column="3"
                     Margin="0,0,0,0"
                     ToolTip="Vreme"
                     Background="{x:Null}"
                     BorderBrush="{x:Null}"
                     Width="55">
-                    <materialDesign:PackIcon Kind="Clock"
+                <materialDesign:PackIcon Kind="Clock"
                                          Width="25"
                                          Height="25"
                                          Foreground="#505050" />
-                </Button>
-                <TextBlock Grid.Column="4"
+            </Button>
+            <TextBlock Grid.Column="4"
                        x:Name="vr"
                        Foreground="#505050"
                        Height="auto"
                        FontSize="15"
                        VerticalAlignment="Center"
                        Margin="-10,0,32,0" />
-            </Grid>
         </Grid>
-    </Window>
+    </Grid>
+</Window>
