Adjusted the database

--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/AllUsersWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/AllUsersWindow.xaml
@@ -91,6 +91,36 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+                        <DataGridTextColumn Header="Gender"
+                                        Width="150"
+                                        Binding="{Binding Gender}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextWrapping"
+                                        Value="Wrap" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Date Of Birth"
+                                        Width="150"
+                                        Binding="{Binding DateOfBirth, StringFormat=\{0:dd.MM.yyyy\}}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextWrapping"
+                                        Value="Wrap" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Email"
+                                        Width="150"
+                                        Binding="{Binding Email}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextWrapping"
+                                        Value="Wrap" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
                         <DataGridTextColumn Header="Address"
                                         Width="150"
                                         Binding="{Binding UserLocation}">
